Moved all launch command logic to start.bat
Running the project in VS Code will now execute start.bat instead of independently executing the compilation and execution commands.